--- a/HiszpanskiWpf.csproj
+++ b/HiszpanskiWpf.csproj
@@ -6,9 +6,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+	
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\hiszp_icon.ico" />
     <None Remove="data.json" />
     <None Remove="Sounds\correct.wav" />
     <None Remove="Sounds\correct_after_mistake.wav" />
@@ -16,6 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Assets\hiszp_icon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="data.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
